modules/vpc/main.tf
resource "aws_vpc" "this" {
    cidr_block = var.vpc_cidr
    enable_dns_hostnames = true
    enable_dns_support = true
    tags = {
        Name = "${var.name}"
    }
}

resource "aws_subnet" "public"{
    count = length(var.azs) #one per AZ
    vpc_id = aws_vpc.this.id 
    cidr_block = var.public_subnet_cidrs[count.index]
    availability_zone = var.azs[count.index]
    map_public_ip_on_launch = true
    tags ={
        Name = "${var.name}-public-${var.azs[count.index]}"
        "kubernetes.io/role/elb" = "1"
    }
}


resource "aws_subnet" "private"{
    count = length(var.azs)
    vpc_id = aws_vpc.this.id 
    cidr_block = var.private_subnet_cidrs[count.index]
    availability_zone = var.azs[count.index]
    tags ={
        Name = "${var.name}-private-${var.azs[count.index]}"
        "kubernetes.io/role/internal-elb" = "1"
    }
}

resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id
    tags = {
        Name = "${var.name}-igw"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.this.id
    tags = {
        Name = "${var.name}-public-rt"
    }
}

resource "aws_route" "public_internet" {
    route_table_id = aws_route_table.public.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  
}

resource "aws_route_table_association" "public" {
    count = length(var.azs)
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat" {
  domain = "vpc"
  tags = {
    Name = "${var.name}-nat-eip"
  }
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public[0].id
  tags = {
    Name = "${var.name}-nat"
  }
  depends_on = [ aws_internet_gateway.this ]

}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "${var.name}-private-rt"
  }
}


resource "aws_route" "private_nat" {
  route_table_id = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.this.id
  
}

resource "aws_route_table_association" "private" {
  count = length(var.azs)
  subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
